--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "botbuilder": "^3.13.1",
     "botbuilder-azure": "^3.0.4",
-    "restify": "^5.0.0"
+    "restify": "^5.0.0",
+    "dotenv-extended": "^1.0.4"
   },
   "devDependencies": {
     "request": "^2.81.0",
